welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not enough arguments for method ligne: (nbCarre: Int)Unit.
Unspecified value parameter nbCarre.
    ligne()
         ^