welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  for (compteur <-1 to 2){
    ligne()
    gauche()
    avance(4)
    droite()
  }
}

def cote(c: Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance(3)
  gauche()
}

def carre(){
  cote(Color.red)
  cote(Color.blue)
  cote(Color.green)
  cote(Color.yellow)
}

def ligne(nbCarre : Int){
  for (compteur <-1 to nbCarre){
    carre()
    avance(4)
  }
}